--- a/libpicotcp/CMakeLists.txt
+++ b/libpicotcp/CMakeLists.txt
@@ -7,7 +7,7 @@
 cmake_minimum_required(VERSION 3.7.2)
 project(libpicotcp NONE)
 
-include(external-project-helpers)
+# include(external-project-helpers)
 
 set(configure_string "")
 
@@ -132,7 +132,7 @@ if(LibPicotcp)
     ExternalProject_Get_Property(picotcp_external SOURCE_DIR)
     set(BUILD_DIR "${SOURCE_DIR}/picotcp/build/")
 
-    DeclareExternalProjObjectFiles(picotcp_external "${BUILD_DIR}/lib/" FILES "libpicotcp.a")
+    # DeclareExternalProjObjectFiles(picotcp_external "${BUILD_DIR}/lib/" FILES "libpicotcp.a")
 
     # create a library which is the sources
     add_library(picotcp_sources STATIC IMPORTED GLOBAL)
